--- a/src/components/pomodoroComponents/BreakTime.css
+++ b/src/components/pomodoroComponents/BreakTime.css
@@ -2,12 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem;
+    margin: 1rem;
+    margin-bottom: 1.5rem;
     padding: 0 2rem 2rem 2rem;
     border-radius: 1rem;
     /* background-color: greenyellow; */
     /* background-color: rgb(120, 194, 194); */
-    background-color: rgb(145, 211, 211);
+    /* background-color: rgb(145, 211, 211); */
+    background-color:  #dad2f3;
 }
 
 .button-container {
