--- a/src/components/pomodoroComponents/SessionTime.css
+++ b/src/components/pomodoroComponents/SessionTime.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 2rem;
+    margin: 1rem;
     padding: 0 2rem 2rem 2rem;
     border-radius: 1rem;
-    background-color: rgb(145, 211, 211);
+    /* background-color: rgb(145, 211, 211); */
+    background-color: #dad2f3;
 }
 
 .button-container {
