--- a/src/App.css
+++ b/src/App.css
@@ -67,12 +67,13 @@ main{
 }
 
 
-
+/* 
 .button-child {
   margin: 0;
   font-size: 1rem;
   cursor: pointer;
   background-color: #f1f1f1;
+  
   color: black;
   padding: 3px 8px;
   border: none;
@@ -80,7 +81,13 @@ main{
   text-align: center;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   margin-bottom: 4px;
-}
+} */
+/* 
+#session-decrement {
+  background-color: rgba(235, 149, 123, 0.616);
+  color: black;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+} */
 
 .main-one{
   display: flex;
@@ -94,26 +101,40 @@ main{
   background-color: transparent;
 }
 .headone{
-  color:rgb(143, 90, 173);
+  color:rgb(102, 45, 134);
   font-weight:bold;
   font-size:2rem;
   margin-left: 0;
   text-align:left;
   /* margin-left: 21rem; */
+  text-shadow:0 13.36px 8.896px #c4b59d,0 -2px 1px #fff;
 }
+
+.headtwo{
+  color:rgb(102, 45, 134);
+  font-weight:bold;
+  font-size:2rem;
+  text-align:center;
+  text-shadow:0 13.36px 8.896px #c4b59d,0 -2px 1px #fff;
+}
+
 
 
 .main-two{
   display: flex;
   flex-direction: column;
   justify-content: right;
-  position: relative;
+  /* position: relative; */
+  position: fixed;
+  right:0;
   float: right;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
   width:19rem;
   border-radius: 10px;
   margin-bottom: 1rem;
-  background-color:white ;
+  background-color:transparent ;
+  padding-right:1rem;
+  
 }
 .set-time-container {
   display: flex;
@@ -135,14 +156,17 @@ span{
   display:flex;
   flex-direction:row;
   flex-wrap: wrap;
-  height: 30rem;
+  /* height: 100%; */
+  
 }
 .todoss{
   color:blanchedalmond;
   background-color: blue;
   /* background:   #FC94A1;
   box-shadow: 0px 10px 20px 0px #FDC0C7; */
+
   background: linear-gradient(180deg, #bb67ff 0%, #c484f3 100%);
+
   box-shadow: 0px 10px 20px 0px #e0c6f5;
   display: flex;
   height: 8rem !important;
@@ -153,9 +177,8 @@ span{
   position: relative;
   cursor: pointer;
   margin: 1.5rem;
-  margin-bottom: 1rem;
-
 }
+
 
 
 
@@ -208,7 +231,7 @@ span{
   
 }
  .innerhead{
- 
+  color:purple;
   text-shadow: 0px 15px 5px rgba(0,0,0,0.1),
                  10px 20px 5px rgba(0,0,0,0.05),
                  -10px 20px 5px rgba(0,0,0,0.05);
@@ -221,4 +244,14 @@ span{
                  0px 14px 10px rgba(0,0,0,0.15),
                  0px 24px 2px rgba(0,0,0,0.09),
                  0px 34px 30px rgba(0,0,0,0.1);
+}
+
+.visibletabs{
+  margin-top: 1rem;
+
+}
+
+.btn {
+opacity: 0.8;
+margin-bottom: 0.5rem;
 }
