--- a/src/components/pomodoroComponents/Timer.css
+++ b/src/components/pomodoroComponents/Timer.css
@@ -7,7 +7,8 @@
     border-radius: 1rem;
     /* background-color: greenyellow; */
     /* background-color: rgb(145, 211, 211); */
-    background-color:  #dad2f3;
+    background-color: #d3c7f7;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 #time-left {
@@ -22,6 +23,9 @@
 #timer-label{
     font-size:1.2rem;
     color:rgb(5, 5, 56);
+    color: purple;
     padding: 1rem;
-    font-weight: bold;
+    font-weight: bolder;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
